Bootstrap feito e adicionando função update

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,17 @@
-<h1>All Articles</h1>
-
-<ul id="articles">
-  <% @articles.each do |article| %>
-    <li>
-      <%= link_to article.title, article_path(article), class: 'article_title', id: "article_#{article.id}" %>
-    </li>
-  <% end %>
-</ul>
-
-<%= link_to "Create a New Article", new_article_path, class: "new_article" %>
+<div class="p-3 mb-2 bg-primary d-flex justify-content-between text-white">
+	<div class="text-white">
+		<h3>All Articles</h3>
+	</div>
+	<div>
+		<%= link_to "ADD ARTICLE", new_article_path, class:"btn btn-primary"%>
+	</div>
+</div>
+<div class="position-relative">
+	<ul id="articles" class="list-group-item" >
+	  <% @articles.each do |article| %>
+	    <li class="list-group-item list-group-item-action">
+	      <%= link_to article.title, article_path(article), class: 'article_title', id: "article_#{article.id}" %>
+	    </li>
+	  <% end %>
+	</ul>
+</div>
