--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,18 @@
-<h1><%= @article.title %></h1>
-<p><%= @article.body %></p>
-<%= link_to "<< Back to Articles List", articles_path %>
+<div class="p-3 mb-2 bg-primary d-flex justify-content-between text-white">
+	<div class="d-flex justify-content-between">
+		<h3><%= @article.title %></h3>
+	</div>
+	<div>
+		<%= link_to "EDIT", edit_article_path(@article), class:"btn btn-default btn-primary" %>
+		<%= link_to "DELETE", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"}, class:"btn btn-danger" %>
+	</div>
+</div>
+<div class="col-2 text-truncate row">
+	<%= @article.body %>
+</div>
+</br>
+<div class="d-flex justify-content-between ">
+	<div>
+		<%= link_to "BACK" , articles_path , class:"btn btn-default btn-primary"  %>
+	</div>
+</div>
