--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,8 +9,9 @@
 <div class="position-relative">
 	<ul id="articles" class="list-group-item" >
 	  <% @articles.each do |article| %>
-	    <li class="list-group-item list-group-item-action">
+	    <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
 	      <%= link_to article.title, article_path(article), class: 'article_title', id: "article_#{article.id}" %>
+	    	<span class="badge badge-primary badge-pill"><%= article.comments.size %></span>
 	    </li>
 	  <% end %>
 	</ul>
