--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,6 +1,12 @@
 <div class="container-fluid">
-	<ul id="comments" class="list-group-item" >
-	  <h5>Comment by <%= comment.author_name %></h5>
+	<ul class="list-group-item" >
+	  <div class="d-flex justify-content-between align-items-center">
+		  <h5>Comment by <%= comment.author_name %></h5>
+		  <div>
+		  	<%= link_to "EDIT", edit_article_comment_path(comment.article, comment), class:"btn btn-default btn-primary" %> 
+		  	<%= link_to "DELETE", article_comment_path(comment.article, comment), method: :delete, data: {confirm: "Really delete the article?"}, class:"btn btn-danger" %>
+		  </div>
+	  </div>
 	  <pre class="comment"><%= comment.body %></pre>
 	</ul>
 </div>
