--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -12,11 +12,36 @@
   </ul>
   <div class="form-group">
     <%= f.label :title, class: "col-md-4 control-label" %><br />
-    <%= f.text_field :title, class: "form-control" %>
+    <%= f.text_field :title, class: "form-control", :required => 'required', :minlength => 1,:maxlength => 50, id:"text_fieldTitleNewArticle" %>
   </div>
   <div class="form-group">
     <%= f.label :body, class: "col-md-4 control-label" %><br />
-    <%= f.text_area :body, class: "form-control" %>
+    <%= f.text_area :body, class: "form-control", :required => 'required',:input_html => {:minlength => 1, maxlength: 500}, id:"text_areaNewArticle" %>
   </div>
-  <%= f.submit "Submit", class:"btn btn-default btn-primary" %>
+  <%= f.submit "Submit", class:"btn btn-default btn-primary", id:"submitNewPost" %>
 <% end %>
+
+<script>
+  $(document).ready(function(){
+    // Verify the number os characters in the input of the title
+    $('#text_fieldTitleNewArticle').bind('input propertychange', function() {
+      if($("#text_fieldTitleNewArticle").val().length > 50){
+        $("#text_fieldTitleNewArticle").attr('class','form-control is-invalid');  
+      }
+      else if($("#text_fieldTitleNewArticle").val().length > 0 && $("#text_fieldTitleNewArticle").val().length <= 50){
+        $("#text_fieldTitleNewArticle").attr('class','form-control is-valid');  
+      }
+    });
+
+    // Verify the number os characters in the input of the text area
+    $('#text_areaNewArticle').bind('input propertychange', function() {
+      if($("#text_areaNewArticle").val().length > 500){
+        $("#text_areaNewArticle").attr('class','form-control is-invalid');  
+      }
+      else if($("#text_areaNewArticle").val().length > 0 && $("#text_areaNewArticle").val().length <= 500){
+        $("#text_areaNewArticle").attr('class','form-control is-valid');  
+      }
+    });
+  });
+    
+</script>
