--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [ @article, @comment ] do |f| %>
+<%= form_with model: [ @article, @comment ], remote: true do |f| %>
   <ul class="list-group">
   <% @article.errors.full_messages.each do |error| %>
     <li class="list-group-item" ><%= error %></li>
