--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -12,11 +12,11 @@
   </ul>
   <div class="form-group">
     <%= f.label :title, class: "col-md-4 control-label" %><br />
-    <%= f.text_field :title, class: "form-control", :required => 'required', :minlength => 1,:maxlength => 50, id:"text_fieldTitleNewArticle" %>
+    <%= f.text_field :title, class: "form-control", :required => 'required', :maxlength => 50, id:"text_fieldTitleNewArticle" %>
   </div>
   <div class="form-group">
     <%= f.label :body, class: "col-md-4 control-label" %><br />
-    <%= f.text_area :body, class: "form-control", :required => 'required',:input_html => {:minlength => 1, maxlength: 500}, id:"text_areaNewArticle" %>
+    <%= f.text_area :body, class: "form-control", :required => 'required', maxlength: 500, id:"text_areaNewArticle" %>
   </div>
   <%= f.submit "Submit", class:"btn btn-default btn-primary", id:"submitNewPost" %>
 <% end %>
