criação de usuario faltando finalizar

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,6 +3,7 @@
 		<h3>All Articles</h3>
 	</div>
 	<div>
+		<%= link_to "REGISTER", new_user_path, class:"btn btn-primary"%>
 		<%= link_to "ADD ARTICLE", new_article_path, class:"btn btn-primary"%>
 	</div>
 </div>
