--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -12,7 +12,7 @@
   </ul>
   <div class="form-group">
     <%= f.label :title, class: "col-md-4 control-label" %><br />
-    <%= f.text_field :title, class: "form-control", :required => 'required', :maxlength => 50, id:"text_fieldTitleNewArticle" %>
+    <%= f.text_field :title, placeholder:"Title", class: "form-control", :required => 'required', :maxlength => 50, id:"text_fieldTitleNewArticle" %>
   </div>
   <div class="form-group">
     <%= f.label :body, class: "col-md-4 control-label" %><br />
