--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,10 +3,15 @@
 		<h3>All Articles</h3>
 	</div>
 	<div>
-		<%= link_to "REGISTER", new_user_path, class:"btn btn-primary"%>
+		<% if !(user_signed_in?) %> <%= link_to "LOGIN", new_user_session_path, class:"btn btn-primary"%>
+		<%= link_to "REGISTER", new_user_registration_path, class:"btn btn-primary"%> <% end %>
+		<% if (user_signed_in?) %> <%= link_to "LOGOUT", destroy_user_session_path, method: :delete, class:"btn btn-primary"%> <% end %>
 		<%= link_to "ADD ARTICLE", new_article_path, class:"btn btn-primary"%>
 	</div>
 </div>
+
+<% if flash.now[:notice] %> <div class="alert alert-info"><%= flash.now[:notice] %></div> <% end %>
+
 <div class="position-relative">
 	<ul id="articles" class="list-group-item" >
 	  <% @articles.each do |article| %>
@@ -17,3 +22,4 @@
 	  <% end %>
 	</ul>
 </div>
+
