--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -7,7 +7,7 @@
   </ul>
   <div class="form-group">
     <%= f.label :author_name, class: "col-md-4 control-label" %><br />
-    <%= f.text_field :author_name, placeholder:"Author Name", class: "form-control", :value => current_user.email %>
+    <%= f.text_field :author_name, placeholder:"Author Name", class: "form-control", :value => current_user.name %>
   </div>
   <div class="form-group">
     <%= f.label :body, class: "col-md-4 control-label" %><br />
