--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,7 +9,9 @@
 </div>
 </br>
 <div class="container-fluid">
-	<%= @article.user %>
+	Author: <%= User.find(@article.user_id).name %>
+	</br>
+	</br>
 	<%= @article.body %>
 </div>
 </br>
