--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -4,8 +4,10 @@
 		  <div class="d-flex justify-content-between align-items-center">
 			  <h5>Comment by <%= comment.author_name %></h5>
 			  <div>
+			  	<% if (user_signed_in?) && (current_user.id == comment.user_id) %>
 			  	<%= link_to "EDIT", edit_article_comment_path(comment.article, comment), class:"btn btn-default btn-primary" %> 
 			  	<%= link_to "DELETE", article_comment_path(comment.article, comment), method: :delete, data: {confirm: "Really delete the comment?"}, class:"btn btn-danger" %>
+			  	<% end %>
 			  </div>
 		  </div>
 		  <pre class="comment"><%= comment.body %></pre>
