--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -14,7 +14,7 @@
 	  </ul>
 	  <div class="form-group">
 	    <%= f.label :author_name, class: "col-md-4 control-label" %><br />
-	    <%= f.text_field :author_name, placeholder:"Author Name", class: "form-control", :required => 'required' %>
+	    <%= f.text_field :author_name, placeholder:"Author Name", class: "form-control", :disabled=>true %>
 	  </div>
 	  <div class="form-group">
 	    <%= f.label :body, class: "col-md-4 control-label" %><br />
